# EDGE-classic

./: .clang-format  .editorconfig  .gitignore  ASanSuppress.txt  CHANGELOG-135.1.txt  CHANGELOG-Preview-2.txt  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  COMPILING.md  README.md  TSanSuppress.txt  Toolchain-mingw64.cmake  branding.cfg  edge-defs.wad  edge.wad  timidity.cfg  udmf_edge.txt
libraries/: CMakeLists.txt
libraries/almostequals/: AlmostEquals.h  CMakeLists.txt
libraries/crsid/: CMakeLists.txt  README.txt  libcRSID.c  libcRSID.h
libraries/dr_libs/: CMakeLists.txt  dr_libs.cc  dr_mp3.h
libraries/fluidlite/: CMakeLists.txt  LICENSE
libraries/fmmidi/: CHANGES.txt  CMakeLists.txt  filter.cpp  filter.hpp  midisynth.cpp  midisynth.hpp
libraries/glad/: CMakeLists.txt
libraries/hmm/: CMakeLists.txt  HandmadeMath.h
libraries/ibxm/: CMakeLists.txt  ibxm.h
libraries/imgui/: CMakeLists.txt  imconfig.h
libraries/libRAD/: CMakeLists.txt  instruments.h  opal.cpp  opal.h  patches.cpp  patches.h  radmidi.cpp  radmidi.h  radplay.cpp  radplay.h
libraries/libcRSID/: CMakeLists.txt  LICENSE  libcRSID.c  libcRSID.h
libraries/libemidi/: CMakeLists.txt
libraries/libgrapheme/: CMakeLists.txt
libraries/libprimesynth/: channel.cpp  conversion.h  envelope.cpp  envelope.h  fixed_point.h  lfo.h  midi.h  soundfont.h  stereo_value.cpp  stereo_value.h  synthesizer.cpp  synthesizer.h
libraries/libvwad/: CMakeLists.txt  vwadvfs.c
libraries/lua/: CMakeLists.txt
libraries/m4p/: CMakeLists.txt  LICENSE  ft_tables.c  it_m_eff.c  it_m_eff.h  it_music.c  it_music.h  it_structs.h  it_tables.c  m4p.c  m4p.h  pmp_mix.c  snd_masm.c
libraries/mimalloc/: CMakeLists.txt
libraries/miniaudio/: CMakeLists.txt  ma_reverb_node.cc  miniaudio.cc  miniaudio_freeverb.h  verblib.h
libraries/minivorbis/: CMakeLists.txt  minivorbis.c  minivorbis.cc  minivorbis.h
libraries/miniz/: CMakeLists.txt
libraries/opal/: CMakeLists.txt  LICENSE.txt  opal.cpp  opal.h
libraries/opalmidi/: CMakeLists.txt  LICENSE.txt  opal.cpp  opal.h  opalmidi.cpp  opalmidi.h  patches.cpp  patches.h
libraries/pl_mpeg/: CMakeLists.txt  MIT.txt  pl_mpeg.cc  pl_mpeg.h
libraries/prns/: CMakeLists.txt  prns.h
libraries/sdl2/: sdl2-config.cmake
libraries/sokol/: CMakeLists.txt  sokol.cc  sokol_color.cc  sokol_color.h  sokol_gfx.h  sokol_gfx_ec.h
libraries/stb/: CMakeLists.txt  stb.cc  stb_image_write.h  stb_sprintf.h  stb_truetype.h  stb_vorbis.h
libraries/superfasthash/: CMakeLists.txt
libraries/thread/: CMakeLists.txt  thread.cc  thread.h
libraries/tracy/: CMakeLists.txt  edge_profiling.h
libraries/tsf/: CMakeLists.txt  tsf.cc  tsf.h
libraries/xxHash/: CMakeLists.txt  xxhash.cc  xxhash.h
source_files/ajbsp/: CMakeLists.txt  ajbsp.cc  ajbsp.h  bsp.h  bsp_level.cc  bsp_local.h  bsp_misc.cc  bsp_node.cc  bsp_parse.cc  bsp_raw_def.h  bsp_system.h  bsp_util.cc  bsp_utility.cc  bsp_utility.h  bsp_wad.cc  bsp_wad.h  edge_ajbsp.h  lib_file.cc  lib_udmf.cc  lib_udmf.h  lib_util.cc  lib_util.h  objid.h  sys_macro.h  w_wad.cc  w_wad.h
source_files/biquad/: Biquad.cpp  Biquad.h  CMakeLists.txt
source_files/coal/: CMakeLists.txt  c_compile.cc  c_compile.h  c_execute.cc  c_execute.h  c_local.h  c_memory.cc  c_memory.h  coal.h
source_files/ddf/: CMakeLists.txt  anim.cc  anim.h  attack.cc  attack.h  boom.cc  collection.h  colormap.cc  colormap.h  ddf_anim.cc  ddf_anim.h  ddf_attack.cc  ddf_attack.h  ddf_boom.cc  ddf_collection.h  ddf_colormap.cc  ddf_colormap.h  ddf_flat.cc  ddf_flat.h  ddf_font.cc  ddf_font.h  ddf_game.cc  ddf_game.h  ddf_image.cc  ddf_image.h  ddf_language.cc  ddf_language.h  ddf_level.cc  ddf_level.h  ddf_line.cc  ddf_line.h  ddf_local.h  ddf_main.cc  ddf_main.h  ddf_movie.cc  ddf_movie.h  ddf_playlist.cc  ddf_playlist.h  ddf_reverb.cc  ddf_reverb.h  (+53 more)
source_files/deh_edge/: CMakeLists.txt  attacks.cc  deh_ammo.cc  deh_attacks.cc  deh_buffer.cc  deh_buffer.h  deh_convert.cc  deh_convert.h  deh_edge.h  deh_english.h  deh_info.cc  deh_main.cc  deh_mobj.cc  deh_mobj.h  deh_patch.h  deh_sounds.cc  deh_storage.h  deh_system.cc  deh_text.cc  deh_text.h  deh_things.cc  deh_util.cc  deh_wad.cc  deh_wad.h  deh_weapons.cc  deh_weapons.h  english.h  frames.cc  i_defs.h  info.cc  info.h  main.cc  misc.cc  mobj.cc  patch.cc  rscript.cc  sounds.cc  sounds.h  storage.cc  system.cc  (+5 more)
source_files/dehacked/: CMakeLists.txt  deh_ammo.cc  deh_ammo.h  deh_attacks.cc  deh_attacks.h  deh_buffer.cc  deh_buffer.h  deh_convert.cc  deh_convert.h  deh_edge.h  deh_english.h  deh_field.cc  deh_field.h  deh_frames.cc  deh_frames.h  deh_i_defs.h  deh_info.cc  deh_info.h  deh_main.cc  deh_misc.cc  deh_misc.h  deh_mobj.cc  deh_mobj.h  deh_music.cc  deh_music.h  deh_patch.cc  deh_patch.h  deh_rscript.cc  deh_rscript.h  deh_sounds.cc  deh_sounds.h  deh_sprites.cc  deh_sprites.h  deh_storage.cc  deh_system.cc  deh_system.h  deh_text.cc  deh_text.h  deh_things.cc  deh_things.h  (+6 more)
source_files/ec_voxelib/: CMakeLists.txt  LICENSE  ec_voxelib.cc  ec_voxelib.h
source_files/edge/: CMakeLists.txt  am_map.cc  am_map.h  bot_nav.cc  bot_nav.h  bot_think.cc  bot_think.h  con_con.cc  con_gui.h  con_link.cc  con_main.cc  con_main.h  con_var.cc  con_var.h  cvt_mus2mid.hpp  cvt_xmi2mid.hpp  defaults.h  dm_data.h  dm_defs.h  dm_state.h  dm_structs.h  dstrings.h  e_event.h  e_input.cc  e_input.h  e_main.cc  e_main.h  e_player.cc  e_player.h  e_search.h  e_ticcmd.h  edge-classic.desktop  edge-classic.sh  f_finale.cc  f_finale.h  f_interm.cc  f_interm.h  g_game.cc  g_game.h  hu_draw.cc  (+278 more)
source_files/epi/: CMakeLists.txt  VGMFile.h  arrays.cc  arrays.h  common_doomdefs.h  cvt_mus2mid.hpp  cvt_xmi2mid.hpp  endianess.h  epi.cc  epi.h  epi_bam.h  epi_bitset.h  epi_color.cc  epi_color.h  epi_crc.cc  epi_crc.h  epi_doomdefs.h  epi_ename.cc  epi_ename.h  epi_file.cc  epi_file.h  epi_filesystem.cc  epi_filesystem.h  epi_known_enames.h  epi_lexer.cc  epi_lexer.h  epi_linux.h  epi_macosx.h  epi_md5.cc  epi_scanner.cpp  epi_scanner.h  epi_sdl.h  epi_str_compare.cc  epi_str_compare.h  epi_str_hash.cc  epi_str_hash.h  epi_str_util.cc  epi_str_util.h  (+67 more)
(+1620 files in other folders)
