add_subdirectory(almostequals)
if (EDGE_SID_SUPPORT)
  add_subdirectory(crsid)
endif()
add_subdirectory(miniaudio)
add_subdirectory(fluidlite)
if (EDGE_SOKOL)
  add_subdirectory(imgui)
  add_subdirectory(sokol)
else()
  add_subdirectory(glad)
endif()
add_subdirectory(hmm)
if (EDGE_VWAD_SUPPORT)
  add_subdirectory(libvwad)
endif()
add_subdirectory(lua)
if (EDGE_TRACKER_SUPPORT)
  add_subdirectory(m4p)
endif()
add_subdirectory(miniz)
if (EDGE_IMF_SUPPORT OR EDGE_OPL_SUPPORT)
  add_subdirectory(opalmidi)
endif()
add_subdirectory(pl_mpeg)
add_subdirectory(prns)
add_subdirectory(stb)
if (NOT EMSCRIPTEN)
  add_subdirectory(thread)
  if (NOT MINGW)  
    add_subdirectory(mimalloc)
  endif()
endif()
add_subdirectory(tracy)
add_subdirectory(xxHash)