add_subdirectory(almostequals)
add_subdirectory(miniaudio)
add_subdirectory(fluidlite)
if (EDGE_SOKOL)
  add_subdirectory(imgui)
  add_subdirectory(sokol)
else()
  add_subdirectory(glad)
endif()
add_subdirectory(hmm)
add_subdirectory(lua)
add_subdirectory(miniz)
add_subdirectory(pl_mpeg)
add_subdirectory(prns)
add_subdirectory(stb)
if (NOT EMSCRIPTEN)
  add_subdirectory(thread)
  add_subdirectory(mimalloc)
endif()
add_subdirectory(tracy)
add_subdirectory(xxHash)

if (EDGE_CLASSIC)
  add_subdirectory(m4p)
  add_subdirectory(opalmidi)
endif()